cmake_minimum_required(VERSION 3.20 FATAL_ERROR)

project(learn-cmake VERSION 0.1.0 LANGUAGES CXX)

# set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/bin)
# set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
# set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/lib)
# set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/bin)
# set(CMAKE_BINARY_DIR ${CMAKE_SOURCE_DIR}/build)

add_subdirectory(Step1)
add_subdirectory(Step2)
add_subdirectory(Step3)
# add_subdirectory(Step4)
# add_subdirectory(Step5)
# add_subdirectory(Step6)
# add_subdirectory(Step7)
# add_subdirectory(Step8)
# add_subdirectory(Step9)
# add_subdirectory(Step10)
# add_subdirectory(Step11)
# add_subdirectory(Step12)
# add_subdirectory(Complete)